[package]
name = "fat-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dump"
path = "src/dump.rs"

[dependencies]
anyhow = "1.0.98"
bitflags = "2.9.1"
chrono = { version = "0.4.41", default-features = false, features = ["alloc", "std"] }
enum_dispatch = "0.3.13"
static_assertions = "1.1.0"
thiserror = "2.0.12"
