[package]
name = "fat-bits"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bitflags = "2.9.1"
chrono = { version = "0.4.41", default-features = false, features = [
    "alloc",
    "std",
] }
compact_str = "0.9.0"
enum_dispatch = "0.3.13"
static_assertions = "1.1.0"
thiserror = "2.0.12"
