[package]
name = "fat-fuse"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", default-features = false, features = ["alloc", "clock", "std"] }
fat-bits = { version = "0.1.0", path = "../fat-bits" }
fuser = "0.15.1"
libc = "0.2.174"
log = "0.4.27"
rand = { version = "0.9.2", default-features = false, features = ["os_rng", "small_rng"] }
thiserror = "2.0.12"
